<resources>
    <string name="app_name">AppIoT</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenido1">Bienvenido!!!</string>
    <string name="bienvenido2">a la App de Seguridad IoT</string>
    <string name="title_activity_registrarse">Registrarse</string>

    <string name="registrarse"> Registrarse </string>
    <string name="nombre"> Nombre: </string>
    <string name="apellido"> Apellido: </string>
    <string name="genero"> Genero: </string>
    <string name="email"> Email: </string>
    <string name="contraseña"> Contraseña </string>
    <string name="documento"> "Gracias por registrarte" </string>
    <string name="title_activity_articulos">Articulos</string>

    <string name="link_registrarse"> Registrate </string>
    <string name="link_entrar"> Entrar </string>
    <string name="title_activity_login_app_io_t">loginAppIoT</string>

    <string name="textologin">Ingresa a tu cuenta:</string>
    <string name="error">Esta mal el correo o la contraseña</string>
    <string name="mesajeregistrate">registrate</string>
    <string name="mesanje">¿Aun no tienes una cuenta?</string>
    <string name="emaillogin">Email:</string>
    <string name="contraseñalogin">Contraseña:</string>

</resources>
