<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.appiot.loginAppIoT"
    tools:showIn="@layout/activity_login_app_io_t"
    android:background="#ffffff">

    <TextView android:text="@string/textologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:textColor="@color/abc_primary_text_disable_only_material_light" />

    <TextView android:text="@string/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/textView10"
        android:textColor="@color/abc_primary_text_disable_only_material_dark" />

    <TextView android:text="@string/mesajeregistrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#3e5edc"
        android:id="@+id/textView14"
        android:layout_alignTop="@+id/textView13"
        android:layout_toEndOf="@+id/textView13"
        android:layout_marginStart="26dp" />

    <TextView android:text="@string/mesanje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp"
        android:textColor="@color/abc_primary_text_disable_only_material_light"
        android:id="@+id/textView13" />

    <TextView android:text="@string/emaillogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView11"
        android:textColor="@color/abc_primary_text_disable_only_material_light" />

    <TextView android:text="@string/contraseñalogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView12"
        android:layout_alignEnd="@+id/textView10"
        android:layout_marginEnd="33dp"
        android:textColor="@color/abc_primary_text_disable_only_material_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_alignBottom="@+id/textView12"
        android:layout_alignEnd="@+id/editText7"
        android:textColor="@color/abc_primary_text_disable_only_material_light" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText7"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignStart="@+id/button8"
        android:textColor="@color/abc_primary_text_disable_only_material_light" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingresar"
        android:id="@+id/button8"
        android:layout_below="@+id/editText7"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/lindo"
        android:layout_below="@+id/error"
        android:layout_alignRight="@+id/textView14"
        android:layout_alignEnd="@+id/textView14"
        android:layout_marginTop="56dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/home"
        android:layout_toEndOf="@+id/textView14"
        android:layout_above="@+id/editText6" />

</RelativeLayout>
